# Chainlit_langchain_app

./: .gitignore  Dockerfile  chainlit.md  csv_chatter.py  docker-compose.yaml  main.py  pdf_chatter.py  pyproject.toml  requirements.txt  start_setup.bash
app/: app.py  csv_chatter.py
chat_app/: app.py  prompt.py
