[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Abhilash Kumar Panda <57190912+abhilashpanda04@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "*"
chainlit="*"
pypdf2 = "^3.0.1"
chromadb = "^0.4.4"
pysqlite3-binary = "^0.5.1"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
